# macrocam

./: .gitignore  README.md  pyproject.toml
macrocam/: cache.py  cli.py  models.py  nutrition.py  utils.py  vision.py
tests/: test_cache.py  test_cli_noninteractive.py  test_models.py  test_nutrition_mapping.py  test_utils_hash.py  test_utils_units.py  test_vision_parse.py
