[project]
name = "macrocam"
version = "0.0.0"
requires-python = "==3.12.12"
dependencies = [
    "httpx>=0.27.2",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "typer>=0.12.3",
]

[project.scripts]
macrocam = "macrocam.cli:app"

[tool.pytest.ini_options]
cache_dir = "tmp/pytest_cache"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
